   button is pressed.
 - Added support for the Pencil extension.
 - Fixed an issue where the status bar panel would not work in ChatZilla.

Version 20080224.110 (Sunday, July 13, 2008)
 - Added a "script monitor", which fixes compatibility issues with the AVIM/HIM,
   VietTyping, and VietUni scripts by turning off any instances of them when
   typing in a webpage.
 - Added a preference to disable the script monitor, in case it causes
   performance issues.
 - Forced ignored textbox IDs to lowercase.
 - Cleared ID textbox after the ID is ignored.
 - Fixed encoding issues that prevented the Vietnamese locale from loading.

Version 20080224.118 (Tuesday, July 15, 2008)
 - Added an option to allow words that begin with "dz" or "f", even when
   spelling rules are enforced.
 - Added support for more rich text editors, including Dojo's Dijit.Editor.
 - Added support for disabling some versions of mViet.
 - Added support for disabling the CHIM and Mudim scripts when typing in a
   webpage. The two scripts are not disabled by default.
 - Added explicit menu items for switching to the previous and next input
   methods. Previously, keys for cycling methods would move around as the input
   method changed, but this approach caused problems in Mac OS X.
 - Options such as input method can no longer be changed when AVIM is disabled.
   Before, the menu items for these options were disabled, but the keyboard
   shortcuts were still active.

Version ${Version} (${Date})
 - Added French localization.
 - Single-line textboxes no longer scroll to the beginning whenever adding
   diacritical marks to words.
 - Added "w" to the informal spelling option.
 - Ensured that the preferences panel still displays correctly on the Mac, even
   if general.useragent.locale has been modified.
 - Fixed behavior on editable menulists (combo boxes), which adds support for
   Google Toolbar and Firefox's Live Titles feature.
 - Added support for editable trees.