@@ -28,6 +28,11 @@ overlay	chrome://browser/content/openLocation.xul						chrome://avim/content/avi
 # Help > Report Broken Web Site...
 overlay	chrome://reporter/content/reportWizard.xul						chrome://avim/content/avim.xul
 
+### Flock ######################################################################
+
+# Image Properties dialog
+overlay	chrome://flock/content/blog/imageProperties.xul	chrome://avim/content/avim.xul
+
 ### Thunderbird ################################################################
 
 # overlay	chrome://messenger/content/messenger.xul							chrome://avim/content/avim.xul
