@@ -31,6 +31,15 @@
 			</Description>
 		</em:targetApplication> -->
 		
+		<!-- Flock -->
+		<em:targetApplication>
+			<Description>
+				<em:id>{a463f10c-3994-11da-9945-000d60ca027b}</em:id>
+				<em:minVersion>2.0pre</em:minVersion>
+				<em:maxVersion>2.0.*</em:maxVersion>
+			</Description>
+		</em:targetApplication>
+		
 		<!-- English / fallback -->
 		<em:name>AVIM</em:name>
 		<em:description>Type fully-accented Vietnamese directly into any web page or dialog box using a standard keyboard.</em:description>
